Fix cropped heart icon bug

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -127,6 +127,7 @@ a {
 }
 .fa-heart {
     font-size: 1.5rem;
+    padding-inline: 2px; // prevents heart icons from being cropped
     color: white;
     text-shadow: 0 0 1px black, 0 0 1px black, 0 0 1px black, 0 0 1px black; 
     &:hover, &:active{
